# room_service_ordering_agent

./: .gitignore  README.md  pyproject.toml
.cursor/rules/: python.mdc
room_service/: env.py  main.py  util.py
room_service/agent/: chat.py  graph.py  nodes.py
room_service/db/: menu.py  orders.py
room_service/models/: general.py  menu.py  order.py  order_validation.py  state.py
room_service/services/: menu_suggestions.py  room_service_api.py
room_service/tests/tools/: test_order_validator.py
room_service/tools/: __init__.py  order_placer.py  order_validator.py
specifications/: flow_diagram.excalidraw  requirements.md  validation_happy_res.json  validation_unhappy_res.json
tests/tools/: test_order_placer.py  test_order_validator.py
