[tool.poetry]
name = "llm-room-service-ordering-system"
version = "0.1.0"
description = ""
authors = ["Mike Gabriel <michaelgabrielinfosec@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.10.6"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
